# coap-openharmony

./: .gitattributes  .gitmodules  CHANGELOG.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
coap/: build-profile.json5  oh-package-lock.json5  oh-package.json5
coap/src/main/: module.json5
coap/src/main/cpp/: CMakeLists.txt  napi_init.cpp
coap/src/main/cpp/types/libcoap/: index.d.ts  oh-package.json5
coap/src/main/cpp/types/libcoap_napi/: oh-package.json5
coap/src/main/cpp/utils/: hilog_helper.cpp  hilog_helper.h  napi_utils.cpp  napi_utils.h
coap/src/ohosTest/: module.json5
entry/: oh-package.json5
entry/src/main/: module.json5
entry/src/main/ets/pages/: Index.ets
